--- a/PerfForesightCRRA-Impatience_Zixuan Huang.ipynb
+++ b/PerfForesightCRRA-Impatience_Zixuan Huang.ipynb
@@ -375,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When $\\rho$ goes up, the slope goes to get closer to one, as shown in the graph. All these lines are above the line representing sustainable consumption because in these situations, the consumer is absolutely impatient. "
+    "When $\\rho$ goes up, the slope gets closer to $r/R$, as shown in the graph. All these lines are above the line representing sustainable consumption because in these situations, the consumer is absolutely impatient. "
    ]
   },
   {
